# oresat-olaf

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  Vagrantfile  bin_check.py  cfc.py  oresat_app.eds  pixel_check.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  test_bpe.py
.github/workflows/: pypi.yaml  tests.yaml  unit_tests.yaml
docs/: canopen.rst  canopen_on_oresat.rst  conf.py  glossary.rst  index.rst  oresat_file.rst  rest_api.rst  scripts.rst
docs/api/: adc.rst  app.rst  canopen.rst  cpufreq.rst  daemon.rst  ecss.rst  gpio.rst  index.rst  node.rst  oresat_file.rst  oresat_file_cache.rst  other.rst  pru.rst  resource.rst  rest_api.rst  service.rst  timer_loop.rst  updater.rst
docs/updater/: index.rst  update_archive.rst
example/: README.md  README.rst  docker-compose.yaml  requirements.txt
example/example_app/: __main__.py  example_app.dcf  example_resource.py  strToHex.py  testCameraOpenCv.py
examples/: example_app.dcf  example_app.py  example_node.dcf  example_node.py
olaf/: __init__.py  _app.py  app.py  updater.py
olaf/_internals/: app.py  master_node.py  node.py  updater.py
olaf/_internals/data/: oresat_app.eds
olaf/_internals/resources/: daemons.py  ecss.py  file_caches.py  fread.py  fwrite.py  logs.py  os_command.py  power_control.py  store_eds.py  system.py  system_info.py  updater.py
olaf/_internals/rest_api/: __init__.py  _blueprints.py  blueprints.py
olaf/_internals/rest_api/templates/: _base.html  base.html  daemons.html  fread.html  fwrite.html  logs.html  od.html  oresat_configs.html  os_command.html  power_control.html  reset.html  root.html  system_info.html  updater.html
olaf/_internals/services/: logs.py  os_command.py  updater.py
olaf/board/: adc.py  cpufreq.py  eeprom.py  gpio.py  pru.py
olaf/bpe/: AC_BitPlaneCoding.c  CMakeLists.txt  DC_EnDeCoding.c  Makefile  README.md  StagesCodingGaggles.c  binding.cpp  bpe.cpp  bpe_decoder.c  bpe_test.py  global.h  lifting_97M.c  main_pybind.cpp  makefile  setup.py  test.py
olaf/bpe/bpe/: AdjustOutput.c  BPEBlockCoding.c  CoeffGroup.c  PatternCoding.c  bitsIO.c  bpe  bpe_encoder.c  cfc.py  errorhandle.c  header.c  lifting_97f.c  main.c  pixel_check.py  tailor.h  testcodes  waveletbpe.c
olaf/bpe/bpe/test_images/: deRR1.img  desena.img
olaf/bpe/source/: AC_BitPlaneCoding.c  AdjustOutput.c  BPEBlockCoding.c  CoeffGroup.c  DC_EnDeCoding.c  Makefile  PatternCoding.c  StagesCodingGaggles.c  UNL_readme_kielymods.rtf  UNL_readme_kielymods.txt  bitsIO.c  bpe_decoder.c  bpe_encoder.c  bu_wmain_pybind.c  cfc.py  colons_global.h  errorhandle.c  global.h  header.c  lifting_97M.c  lifting_97f.c  main_pybind.c  main_pybind.h  pixel_check.py  ricecoding.c  source_main.c  waveletbpe.c  ycol_global.h
olaf/bpe/test/: cfc.py  pixel_check.py
olaf/bpe/test_images/: deRR0.img
olaf/bpe/testing/: bin_check.py  cfc.py  pixel_check.py  test_bpe.py
olaf/bpe/testing/img_files/encoded/: GHplaceholder
olaf/bpe_wd/: bpe.cpp
olaf/bpe_wd/source/: AC_BitPlaneCoding.c  BPEBlockCoding.c  README.rtf  StagesCodingGaggles.c  bitsIO.c  bpe_decoder.c  bpe_main.c  errorhandle.c  global.h  header.c  lifting_97M.c  main_pybind.h  makefile
olaf/canopen/: __init__.py  master_node.py  network.py  node.py
olaf/common/: __init__.py  adc.py  cpufreq.py  daemon.py  ecss.py  eeprom.py  gpio.py  oresat_file.py  oresat_file_cache.py  pru.py  resource.py  service.py  timer_loop.py
olaf/data/: oresat_app.eds
olaf/resources/: ecss.py  file_caches.py  fread.py  fwrite.py  logs.py  os_command.py  system_info.py  updater.py
olaf/rest_api/: __init__.py  _templates.py  od.py  rest_api.py
olaf/rest_api/templates/: base.html  fwrite.html  od.html  os_command.html  root.html  system_info.html  updater.html
olaf/scripts/: file_transfer.py  new_eds.py  os_command.py  sdo_transfer.py  sync.py  system_info.py
olaf/tools/: cards.csv  olaf_update_maker.py  package_management_dialog.py  pip_management_dialog.py
oresat_app/: __init__.py  app.py  updater.py
oresat_app/common/: oresat_file_cache.py  pru.py  resource.py
oresat_app/resources/: ecss.py  system_info.py  updater.py
oresat_linux_node/: __init__.py  node.py  updater.py
oresat_linux_node/apps/: ecss.py  file_cache.py  file_caches.py  fread.py  fwrite.py  logs.py  os_command.py  system_info.py  updater.py
oresat_linux_node/common/: app.py  ecss.py  oresat_file.py  oresat_file_cache.py
scripts/: file_transfer.py  os_command.py  sdo_transfer.py  system_info.py
tests/: __init__.py
tests/apps/: __init__.py
tests/bpe/: bin_check.py  cfc.py  pixel_check.py  test_bpe.py
tests/canopen/: test_ecss.py
tests/common/: test_ecss.py  test_oresat_file.py  test_oresat_file_cache.py  test_pru.py  test_resources.py
tests/internal/: test_ecss.py  test_oresat_file.py
tests/internals/: __init__.py  conftest.py  test_rest_api.py
tests/internals/resources/: __init__.py  test_ecss.py  test_file_caches.py  test_fread.py  test_fwrite.py  test_os_command.py  test_system_info.py
tests/internals/services/: __init__.py  test_os_command.py  test_service.py
tests/internals/updater/: test_updater.py
tests/resource/: __init__.py  test_ecss.py  test_os_command.py
tests/resources/: __init__.py  test_ecss.py  test_file_caches.py  test_fread.py  test_fwrite.py  test_system_info.py
tests/updater/: test_updater.py
tests/updater/test_files/: README.md
