[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-olaf"
description = "Application framework for all OreSat Linux boards"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "canopen",
    "flask",
    "loguru",
    "natsort",
    "psutil",
    "oresat-configs",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "olaf.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.ico"]
