[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-olaf"
description = "Application framework for all OreSat Linux boards"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "canopen",
    "flask",
    "loguru",
    "psutil",
    "python-can>=4.3.0",
    "oresat-configs>=0.8.0,<1.0.0",
]

dynamic = ["version"]

[dependency-groups]
dev = [
    "build",
    "ruff",
    "mypy",
    "types-pywin32",
    "types-psutil",
    "types-colorama",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-mermaid"
]

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.ico"]

[tool.setuptools_scm]
write_to = "olaf/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # D203 and D213 conflict with D211 and D212. Prefer the latter which follow
    # PEP257
    "D203",
    "D213",
    # Conflicts with formatter
    "COM812", # missing-trailing-comma
    # Stylistic choices for quote-style = preserve
    "Q000",  # Single quotes found but double quotes preferred
    "Q002",  # Single quote docstring found but double quotes preferred
    "D300",  # Use triple double quotes
    # FIXME: These should be turned back on but take effort
    "D102",  # Missing docstring in public method
    "D107",  # Missing docstring in `__init__`
    "PLR0915", # Too many statements
    "S202",  # Uses of `tarfile.extractall()`
    "S108",  # Insecure usage of temporary directory
    "S602",  # `subprocess` call with `shell=True
    "S607",  # Starting a process with a partial executable path
    "RUF012",# Mutable default value for class attribute
    "PLR0912",# Too many branches
    "ARG002", # Unused method argument
    "C901", # Function is too complex
    "FBT001",
    "FBT002",
    "PTH",
    "PERF203",
    "BLE001",
    "D",
    # These are the opposite of what I want
    "D413",  # Missing blank line after last section
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use an f-string literal
    "FIX",  # flake8-fixme
    "TD",  # flake8-todos
    # This might be good to turn on later, right now I'm on the fence about it
    "TRY003",  # Avoid specifying long messages outside the exception class
    # Another one that might be good later but for now is too argessive. Many of
    # the numbers it flags are obvious from context.
    "PLR2004",  # Magic value used in comparison
    "TID252",  # Prefer absolute imports over relative imports from parent modules
    "ERA001",  # Remove commented out code. Nice but too many false positives
]

[tool.ruff.lint.per-file-ignores]
# Test specific lint ignores. These files are not part of the main
# olaf application
"tests/**/{test_*,__init__,conftest}.py" = [
    "S101",  # assert - pytest prefers plain assert
    "S311",
    "SLF001", # Private member accessed - the tests should only access the
              # public interface but lots of things would have to be redesigned
    "PLR0915",
    "D100",
    "D101",
    "D103",
    "D104",
]

[tool.pytest.ini_options]
markers = [
    "olaf_resource(res): for passing the resource under test to the MockApp fixture",
]
