[metadata]
name = oresat-olaf
version = attr: olaf.__version__
description = Application framework for all OreSat Linux boards
long_description = file: README.rst
url = https://github.com/oresat/oresat-olaf
author = PSAS
author_email = oresat@pdx.edu
maintainer = PSAS
maintainer_email = oresat@pdx.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    canopen
    psutil
    loguru
python_requires = >=3.7

[options.package_data]
olaf = data/*

[options.entry_points]
console_scripts =
    olaf-sdo-transfer = olaf.scripts.sdo_transfer:main
    olaf-file-transfer = olaf.scripts.file_transfer:main
    olaf-os-command = olaf.scripts.os_command:main
    olaf-system-info = olaf.scripts.system_info:main

[flake8]
ignore = E402, __init__.py: F401
exclude = .git, __pycache__, build, dist
max-line-length = 99
